# saniraq-kz

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: alembic.ini  main.py  models.py
src/config/: db_connect.py
src/migrations/: README  env.py
src/migrations/versions/: 1e7e0e012966_inital.py  90709bf1754a_initial.py
