[tool.poetry]
name = "saniraq"
version = "0.1.0"
description = ""
authors = ["hiki7 <rsaliyev03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
sqlmodel = "^0.0.22"
alembic = "^1.13.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
docker = "^7.1.0"
uvicorn = "^0.30.6"
passlib = "^1.7.4"
pycryptodome = "^3.20.0"
psycopg = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
